# travis-ci-cpp-testing

./: .gitignore  .travis.yml  README.md  coverage.sh
src/hello/: CMakeLists.txt  main.cpp
